# filemanager

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  filesystem.rs  indexer.rs  mod.rs  operations.rs  search.rs  wsl.rs
src-tauri/src/fs/: mod.rs  operations.rs
src-tauri/src/indexer/: cache.rs  entry.rs  mod.rs  scanner.rs  watcher.rs
src/lib/components/: BatchRenameDialog.svelte  CommandPalette.svelte  ContextMenu.svelte  FileIcon.svelte  FileList.svelte  FileRow.svelte  GlobalSearch.svelte  HelpOverlay.svelte  InputDialog.svelte  Pane.svelte  PathBar.svelte  Sidebar.svelte  StatusBar.svelte  TitleBar.svelte
src/lib/stores/: clipboard.ts  config.ts  contextMenu.ts  index.ts  panes.ts  selection.ts  undo.ts
src/lib/utils/: formatters.ts  ipc.ts  keybindings.ts
src/routes/: +page.svelte
