[package]
name = "filemanager"
version = "0.1.0"
description = "Dual-pane file manager built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "filemanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = "0.4"
trash = "5"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
notify = { version = "7", features = ["macos_fsevent"] }
parking_lot = "0.12"
open = "5"

